--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@asymmetrik/ngx-leaflet": "^3.0.2",
     "core-js": "^2.4.1",
+    "leaflet": "^1.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
