--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@asymmetrik/ngx-leaflet": "^3.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "leaflet": "^1.3.1",
     "rxjs": "^5.5.6",
