--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "leaflet": "^1.3.1",
+    "ng-responsive-image": "^1.0.0",
     "ng2-carouselamos": "^3.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
