--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@asymmetrik/ngx-leaflet": "^3.0.2",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "angular-route": "^1.7.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "leaflet": "^1.3.1",
